frontend/src/style.scss
//// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
//@import "../node_modules/bootstrap/scss/functions";
//
//// 2. Include any default variable overrides here
//
//// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
//@import "../node_modules/bootstrap/scss/variables";
//@import "../node_modules/bootstrap/scss/variables-dark";
//
//// 4. Include any default map overrides here
//
//// 5. Include remainder of required parts
//@import "../node_modules/bootstrap/scss/maps";
//@import "../node_modules/bootstrap/scss/mixins";
//@import "../node_modules/bootstrap/scss/root";
//
//// 6. Optionally include any other parts as needed
//@import "../node_modules/bootstrap/scss/utilities";
//@import "../node_modules/bootstrap/scss/reboot";
//@import "../node_modules/bootstrap/scss/type";
//@import "../node_modules/bootstrap/scss/images";
//@import "../node_modules/bootstrap/scss/containers";
//@import "../node_modules/bootstrap/scss/grid";
//@import "../node_modules/bootstrap/scss/helpers";



// Default variable overrides
//$body-bg: #000;
//$body-color: #111;
//$font
//$font-family-sans-serif: "Tahoma", "Geneva", "sans-serif";
//$font-family-base: "Tahoma", "Geneva", "sans-serif";

html {
    background-color: rgba(27, 38, 54, 1);
    text-align: center;
    color: white;
}

/*
    No scrolling root element
 */
html, body {margin: 0; height: 100%; overflow: hidden}

body {
    margin: 0;
    color: white;
    font-family: "Tahoma", "Geneva", "sans-serif" !important;
}

#app {
    height: 100vh;
    text-align: center;
}

